[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "A library and example solutions for Google Code Jam programming contest"
edition = "2018"
license = "MIT"
name = "codejam"
repository = "https://github.com/hayatoito/codejam"
version = "0.1.0"

[dependencies]
bit-vec = "0.5.0"
env_logger = "0.6.0"
log = "0.4.6"
num = "0.2.0"
ordered-float = "1.0.1"
regex = "1.1.0"

[dev-dependencies]
quickcheck = "0.8.0"
quickcheck_macros = "0.8.0"
